--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "anasa/response-strategy": "^1.0.2",
+        "anasa/response-strategy": "^1.0.4",
+        "darkaonline/l5-swagger": "^8.6",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
