--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
-        "spatie/laravel-permission": "^6.9",
-        "predis/predis": "^2.2"
+        "php-amqplib/php-amqplib": "3.7.2",
+        "predis/predis": "^2.2",
+        "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
