Coexistence of Oauth+JWT and Sanctum for versioned APIs.

--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=gateways_project
+DB_DATABASE=gatewaytesting
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -62,3 +62,14 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+RABBITMQ_VHOST=/
+
+
+PASSPORT_CLIENT_ID=4
+PASSPORT_CLIENT_SECRET=kANzsus68sj1IpdsEkyHU01rNX8RsR4JABRN6vYJ
+PASSPORT_REDIRECT_URI=http://localhost/auth/callback
