--- a/.env.testing
+++ b/.env.testing
@@ -68,3 +68,8 @@ RABBITMQ_PORT=5672
 RABBITMQ_USER=guest
 RABBITMQ_PASSWORD=guest
 RABBITMQ_VHOST=/
+
+
+PASSPORT_CLIENT_ID=4
+PASSPORT_CLIENT_SECRET=kANzsus68sj1IpdsEkyHU01rNX8RsR4JABRN6vYJ
+PASSPORT_REDIRECT_URI=http://localhost/auth/callback
