--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "anasa/response-strategy": "^1.0.4",
         "darkaonline/l5-swagger": "^8.6",
         "laravel/framework": "^11.9",
+        "laravel/passport": "12.3.1",
         "laravel/sanctum": "^4.0",
+        "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
