--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,9 @@ jobs:
       - name: Generate application key
         run: php artisan key:generate
 
+      - name: Generate Passport keys
+        run: php artisan passport:keys
+
       - name: Run migrations
         env:
           DB_CONNECTION: mysql
