--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Laravel CI
 on:
   push:
     branches:
-      - main
+      - git-hub-actions
   pull_request:
     branches:
       - main
@@ -36,6 +36,14 @@ jobs:
           php-version: '8.2'
           extensions: mbstring, bcmath, mysqli, pdo_mysql
           coverage: none
+
+      - name: Cache Composer dependencies
+        uses: actions/cache@v3
+        with:
+          path: vendor
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-composer-
 
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress --no-interaction
