--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "anasa/response-strategy": "^1.0.4",
         "darkaonline/l5-swagger": "^8.6",
+        "ezyang/htmlpurifier": "^4.18",
         "laravel/framework": "^11.9",
         "laravel/passport": "12.3.1",
         "laravel/sanctum": "^4.0",
