New feature and examples.

--- a/.env.testing
+++ b/.env.testing
@@ -70,6 +70,15 @@ RABBITMQ_PASSWORD=guest
 RABBITMQ_VHOST=/
 
 
+PASSPORT_PRIVATE_KEY=oauth-private.key
+PASSPORT_PUBLIC_KEY=oauth-public.key
+
 PASSPORT_CLIENT_ID=4
 PASSPORT_CLIENT_SECRET=kANzsus68sj1IpdsEkyHU01rNX8RsR4JABRN6vYJ
 PASSPORT_REDIRECT_URI=http://localhost/auth/callback
+
+
+# Documentation: https://dashboard.ngrok.com/get-started/setup/windows
+GITHUB_CLIENT_ID=Ov23liT12LOEk2F2QoNH
+GITHUB_CLIENT_SECRET=3a53d6f69dec2e8a1a2eaee600e23e447211e010
+GITHUB_REDIRECT_URI=https://68bb-77-70-30-176.ngrok-free.app/authentication/github/callback
