--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.2",
         "anasa/response-strategy": "^1.0.4",
+        "barryvdh/laravel-dompdf": "^3.1",
         "darkaonline/l5-swagger": "^8.6",
         "ezyang/htmlpurifier": "^4.18",
         "laravel/framework": "^11.9",
@@ -16,9 +17,10 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "php-amqplib/php-amqplib": "3.7.2",
         "predis/predis": "^2.2",
-        "spatie/laravel-permission": "^6.9"
+        "spatie/laravel-permission": "^6.15"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
