--- a/.env.example
+++ b/.env.example
@@ -34,7 +34,14 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+# QUEUE_CONNECTION=database
+
+QUEUE_CONNECTION=rabbitmq
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+RABBITMQ_VHOST=/
 
 CACHE_STORE=database
 CACHE_PREFIX=
@@ -62,13 +69,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-
-RABBITMQ_HOST=localhost
-RABBITMQ_PORT=5672
-RABBITMQ_USER=guest
-RABBITMQ_PASSWORD=guest
-RABBITMQ_VHOST=/
-
 
 PASSPORT_CLIENT_ID=4
 PASSPORT_CLIENT_SECRET=kANzsus68sj1IpdsEkyHU01rNX8RsR4JABRN6vYJ
