--- a/.env.testing
+++ b/.env.testing
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=testing
 APP_KEY=base64:hIu6se+4QtlH1P03spDeWdHzfWUDsz3SKg+YAFUTmpk=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
@@ -19,32 +19,48 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3311
-DB_DATABASE=gatewaytesting
-DB_USERNAME=root
-DB_PASSWORD=root
-
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
+### MYSQL
+DB_CONNECTION=mysql
+DB_HOST=mysql_db_testing
+DB_PORT=3306
+DB_DATABASE=gatewaytesting
+DB_USERNAME=root
+DB_PASSWORD=root
+
+### MONGO
+MONGO_HOST=mongo_db
+MONGO_PORT=27017
+MONGO_USER=root
+MONGO_PASSWORD=root
+MONGO_DB=mongo_db
+
+### REDIS
+REDIS_CLIENT=phpredis
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=null
+
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+### RABBITMQ
+QUEUE_CONNECTION=rabbitmq
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
+RABBITMQ_VHOST=/
+
+# CACHE_STORE=database
+CACHE_STORE=redis
+CACHE_DRIVER=redis
 CACHE_PREFIX=
-
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
 
 MAIL_MAILER=log
 MAIL_HOST=127.0.0.1
@@ -63,12 +79,6 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-RABBITMQ_HOST=localhost
-RABBITMQ_PORT=5672
-RABBITMQ_USER=guest
-RABBITMQ_PASSWORD=guest
-RABBITMQ_VHOST=/
-
 
 PASSPORT_PRIVATE_KEY=oauth-private.key
 PASSPORT_PUBLIC_KEY=oauth-public.key
@@ -76,7 +86,6 @@ PASSPORT_PUBLIC_KEY=oauth-public.key
 PASSPORT_CLIENT_ID=4
 PASSPORT_CLIENT_SECRET=kANzsus68sj1IpdsEkyHU01rNX8RsR4JABRN6vYJ
 PASSPORT_REDIRECT_URI=http://localhost/auth/callback
-
 
 # Documentation: https://dashboard.ngrok.com/get-started/setup/windows
 GITHUB_CLIENT_ID=Ov23liT12LOEk2F2QoNH
