--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "maatwebsite/excel": "^3.1",
         "php-amqplib/php-amqplib": "3.7.2",
         "predis/predis": "^2.2",
-        "spatie/laravel-permission": "^6.15"
+        "spatie/laravel-permission": "^6.15",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^14.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
