--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ on:
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
+    container:
+      image: php:8.2-apache
 
     services:
       mariadb:
@@ -49,7 +51,23 @@ jobs:
           coverage: none
 
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y netcat-traditional libpng-dev libjpeg62-turbo-dev libfreetype6-dev locales zip libzip-dev unzip git curl libonig-dev libxml2-dev libpq-dev memcached redis-server
+        run: |
+          apt-get update && apt-get install -y \
+            netcat-traditional \
+            libpng-dev \
+            libjpeg62-turbo-dev \
+            libfreetype6-dev \
+            locales \
+            zip \
+            libzip-dev \
+            unzip \
+            git \
+            curl \
+            libonig-dev \
+            libxml2-dev \
+            libpq-dev \
+            memcached \
+            redis-server
 
       - name: Cache Composer dependencies
         uses: actions/cache@v3
@@ -74,6 +92,11 @@ jobs:
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-npm-
+
+
+      - name: Set correct permissions
+        run: |
+          chown -R www-data:www-data /var/www/html
 
       - name: Install npm dependencies
         run: npm install
