replaced libjpeg62-turbo-dev with libjpeg-dev

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,6 @@ on:
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
-    container:
-      image: php:8.2-apache
 
     services:
       mariadb:
@@ -45,11 +43,8 @@ jobs:
 
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
-        env:
-          runner: self-hosted
         with:
           php-version: '8.2'
-          tools: composer, phpunit
           extensions: mbstring, bcmath, mysqli, pdo_mysql, redis, mongodb, pdo_pgsql, pgsql, intl, zip, gettext
           coverage: none
 
@@ -58,7 +53,7 @@ jobs:
           apt-get update && apt-get install -y \
             netcat-traditional \
             libpng-dev \
-            libjpeg62-turbo-dev \
+            libjpeg-dev \
             libfreetype6-dev \
             locales \
             zip \
@@ -95,11 +90,6 @@ jobs:
           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-npm-
-
-
-      - name: Set correct permissions
-        run: |
-          chown -R www-data:www-data /var/www/html
 
       - name: Install npm dependencies
         run: npm install
