--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,33 +13,26 @@ jobs:
   laravel-tests:
     runs-on: ubuntu-latest
 
-    services:
-      mariadb:
-        image: mariadb:10.4
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: gatewaytesting
-        ports:
-          - 3320:3306
-        options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
-
-      redis:
-        image: redis:latest
-        ports:
-          - 6379:6379
-
-      memcached:
-        image: memcached:latest
-        ports:
-          - 11211:11211
 
     steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+
       - name: Checkout code
         uses: actions/checkout@v3
+
+        # Run Docker Compose containers
+      - name: Start Docker Compose services
+        run: |
+          docker-compose -f docker-compose.yml up -d
+
+        # Wait for services to be ready
+      - name: Wait for services to be ready
+        run: |
+          docker-compose exec -T mysql_db_testing mysqladmin ping --host=mysql_db_testing --silent
+          docker-compose exec -T redis redis-cli ping
+          docker-compose exec -T memcached echo "stats" | nc localhost 11211
 
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
@@ -139,3 +132,7 @@ jobs:
           DB_USERNAME: root
           DB_PASSWORD: root
         run: vendor/bin/phpunit
+
+        # Stop Docker Compose containers
+      - name: Stop Docker Compose services
+        run: docker-compose down --volumes --remove-orphans
