--- a/.env.example
+++ b/.env.example
@@ -27,26 +27,26 @@ SESSION_DOMAIN=null
 
 ### MYSQL
 DB_CONNECTION=mysql
-DB_HOST=mysql_db # Docker
-# DB_HOST=127.0.0.1
-DB_PORT=3306 # Docker
-# DB_PORT=3319 # Local
+# DB_HOST=mysql_db # Docker
+DB_HOST=127.0.0.1
+# DB_PORT=3306 # Docker
+DB_PORT=3319 # Local
 DB_DATABASE=gateway_db
 DB_USERNAME=root
 DB_PASSWORD=root
 
 ### MONGO
 MONGO_HOST=mongo_db
-MONGO_PORT=27017 # Docker
-# MONGO_PORT=27029 # Local
+# MONGO_PORT=27017 # Docker
+MONGO_PORT=27029 # Local
 MONGO_USER=root
 MONGO_PASSWORD=root
 MONGO_DB=mongo_db
 
 ### REDIS
 REDIS_CLIENT=phpredis
-REDIS_HOST=redis # Docker
-# DB_HOST=127.0.0.1
+# REDIS_HOST=redis # Docker
+DB_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=null
 
