--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,12 +69,12 @@ jobs:
       #       sleep 5
       #     done
 
-      - name: Wait for MySQL to be ready
-        run: |
-          until docker-compose exec -T gateway_service mysqladmin ping --host=mysql_db_testing --silent; do
-            echo "Waiting for MySQL to be ready..."
-            sleep 5
-          done
+      # - name: Wait for MySQL to be ready
+      #   run: |
+      #     until docker-compose exec -T gateway_service mysqladmin ping --host=mysql_db_testing --silent; do
+      #       echo "Waiting for MySQL to be ready..."
+      #       sleep 5
+      #     done
 
       - name: Run tests inside gateway_service
         run: docker-compose exec -T gateway_service vendor/bin/phpunit
