--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,56 +25,18 @@ jobs:
           sudo apt-get install -y docker-compose
 
       - name: Start Docker Compose services
-        run: docker-compose up -d
-
-      # - name: Set environment file for CI inside gateway_service
-      #   run: docker-compose exec gateway_service cp .env.ci.testing .env.testing
-
-      # - name: Install Composer dependencies inside gateway_service
-      #   run: docker-compose exec gateway_service composer install --prefer-dist --no-progress --no-interaction
-
-      # - name: Install npm dependencies inside gateway_service
-      #   run: docker-compose exec gateway_service npm install
-
-      # - name: Build assets inside gateway_service
-      #   run: docker-compose exec gateway_service npm run build
-
-      # - name: Generate application key inside gateway_service
-      #   run: docker-compose exec -T gateway_service php artisan key:generate
-
-      # - name: Generate Passport keys inside gateway_service
-      #   run: docker-compose exec -T gateway_service php artisan passport:keys
-
-      # - name: Wait for Database
-      #   run: |
-      #     chmod +x docker/scripts/wait-for-db.sh
-      #     docker-compose exec gateway_service ./docker/scripts/wait-for-db.sh
-
-      # - name: Run migrations inside gateway_service
-      #   run: docker-compose exec gateway_service php artisan migrate --force
-
-
-      # - name: Run migrations for testing inside gateway_service
-      #   run: docker-compose exec -T gateway_service php artisan migrate --env=testing --no-interaction
-
+        run: docker-compose up --build --force-recreate
 
       - name: Check if gateway_service is running
         run: |
           docker ps | grep gateway_service || echo "gateway_service is not running"
 
-      # - name: Wait for gateway_service to be ready
-      #   run: |
-      #     until docker-compose exec -T gateway_service curl -s http://localhost:8088; do
-      #       echo "Waiting for gateway_service to be ready..."
-      #       sleep 5
-      #     done
-
-      # - name: Wait for MySQL to be ready
-      #   run: |
-      #     until docker-compose exec -T gateway_service mysqladmin ping --host=mysql_db_testing --silent; do
-      #       echo "Waiting for MySQL to be ready..."
-      #       sleep 5
-      #     done
+      - name: Wait for gateway_service to finish passport:install and be ready
+        run: |
+          until docker-compose logs gateway_service | grep -q "Running passport:install for testing..." && docker-compose logs gateway_service | grep -q "Dockerfile is ready" && docker-compose logs gateway_service | grep -q "Encryption keys generated successfully"; do
+            echo "Waiting for gateway_service to be fully ready..."
+            sleep 5
+          done
 
       - name: Run tests inside gateway_service
         run: docker-compose exec -T gateway_service vendor/bin/phpunit
