--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
           sudo apt-get install -y docker-compose
 
       - name: Start Docker Compose services
-        run: docker-compose up --build --force-recreate
+        run: docker-compose up --build --force-recreate -d
 
       - name: Check if gateway_service is running
         run: |
