--- a/.github/workflows/ci_staging.yml
+++ b/.github/workflows/ci_staging.yml
@@ -19,6 +19,9 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          ref: staging
 
       - name: Set up Docker Compose
         run: |
@@ -51,6 +54,9 @@ jobs:
         run: |
           git config --global user.email "github-actions@github.com"
           git config --global user.name "GitHub Actions"
+
+          git fetch origin main
+
           git checkout main
           git merge --no-ff staging -m "Auto-merge from staging"
           git push origin main
