--- a/.github/workflows/ci_staging.yml
+++ b/.github/workflows/ci_staging.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - staging
 
-  pull_request:
-    branches:
-      - staging
+  # pull_request:
+  #   branches:
+  #     - staging
 
 jobs:
   laravel-tests:
