--- a/.github/workflows/ci_staging.yml
+++ b/.github/workflows/ci_staging.yml
@@ -9,6 +9,9 @@ on:
   #   branches:
   #     - staging
 
+permissions:
+  contents: write
+
 jobs:
   laravel-tests:
     runs-on: ubuntu-latest
@@ -49,6 +52,10 @@ jobs:
 
       - name: Stop Docker Compose services
         run: docker-compose down --volumes --remove-orphans
+
+
+      - name: Configure GitHub Token
+        run: git config --global url."https://x-access-token:${{ secrets.PAT_TOKEN }}".insteadOf "https://github.com/"
 
       - name: Push to main if tests pass
         run: |
