--- a/.github/workflows/ci_staging.yml
+++ b/.github/workflows/ci_staging.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
     branches:
       - staging
+    types:
+      - opened
+      - synchronize
 
 permissions:
   contents: write
@@ -58,6 +61,7 @@ jobs:
 
 
       - name: Push to main if tests pass
+        if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action == 'closed')
         run: |
           git config --global user.email "github-actions@github.com"
           git config --global user.name "GitHub Actions"
@@ -66,4 +70,4 @@ jobs:
 
           git checkout main
           git merge --no-ff staging -m "Auto-merge from staging"
-          git push origin main
+          git push origin main --no-verify
