--- a/.github/workflows/ci_main.yml
+++ b/.github/workflows/ci_main.yml
@@ -1,13 +1,6 @@
 name: Laravel CI - Main
 
 on:
-  workflow_run:
-    workflows: ["Laravel CI - Staging"]
-    branches:
-      - main
-    types:
-      - completed
-
   push:
     branches:
       - main
@@ -18,6 +11,8 @@ on:
     types:
       - opened
       - synchronize
+
+  workflow_dispatch:
 
 permissions:
   contents: write
