--- a/.github/workflows/ci_devnext.yml
+++ b/.github/workflows/ci_devnext.yml
@@ -7,6 +7,12 @@ on:
     types:
       - opened
       - synchronize
+      - reopened
+    paths-ignore:
+      - .github/workflows/ci_devnext.yml
+      - .github/workflows/ci_staging.yml
+      - .github/workflows/ci_main.yml
+      - 'README.md'
 
 jobs:
   devnext-tests:
