--- a/.github/workflows/ci_staging.yml
+++ b/.github/workflows/ci_staging.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - staging
+    paths-ignore:
+      - .github/workflows/ci_devnext.yml
+      - .github/workflows/ci_staging.yml
+      - .github/workflows/ci_main.yml
+      - 'README.md'
 
   pull_request:
     branches:
@@ -11,6 +16,11 @@ on:
     types:
       - opened
       - synchronize
+      - reopened
+    paths-ignore:
+      - .github/workflows/ci_devnext.yml
+      - .github/workflows/ci_main.yml
+      - 'README.md'
 
 permissions:
   contents: write
