--- a/.github/workflows/ci_staging.yml
+++ b/.github/workflows/ci_staging.yml
@@ -19,6 +19,7 @@ on:
       - reopened
     paths-ignore:
       - .github/workflows/ci_devnext.yml
+      - .github/workflows/ci_staging.yml
       - .github/workflows/ci_main.yml
       - 'README.md'
 
