--- a/.github/workflows/ci_main.yml
+++ b/.github/workflows/ci_main.yml
@@ -25,6 +25,7 @@ on:
     paths-ignore:
       - .github/workflows/ci_devnext.yml
       - .github/workflows/ci_staging.yml
+      - .github/workflows/ci_main.yml
       - 'README.md'
 
   workflow_dispatch:
