--- a/.github/workflows/ci_devnext.yml
+++ b/.github/workflows/ci_devnext.yml
@@ -14,6 +14,8 @@ on:
       - .github/workflows/ci_main.yml
       - 'README.md'
 
+  workflow_dispatch:
+
 jobs:
   devnext-tests:
     runs-on: ubuntu-latest
