--- a/.github/workflows/ci_main.yml
+++ b/.github/workflows/ci_main.yml
@@ -14,6 +14,7 @@ on:
       - .github/workflows/ci_staging.yml
       - .github/workflows/ci_main.yml
       - 'README.md'
+      - 'README/**'
 
   pull_request:
     branches:
