--- a/.github/workflows/ci_staging.yml
+++ b/.github/workflows/ci_staging.yml
@@ -17,6 +17,7 @@ on:
       - .github/workflows/ci_staging.yml
       - .github/workflows/ci_main.yml
       - 'README.md'
+      - 'README/**'
 
   workflow_dispatch:
 
