--- a/.github/workflows/ci_devnext.yml
+++ b/.github/workflows/ci_devnext.yml
@@ -1,4 +1,4 @@
-name: Laravel CI - DevNext
+name: DevNext
 
 on:
   pull_request:
@@ -42,9 +42,7 @@ jobs:
 
       - name: Wait for gateway_service to finish configurations and restart apache
         run: |
-          until docker-compose logs gateway_service | grep -q "Running passport:keys for testing..." && \
-              docker-compose logs gateway_service | grep -q "Encryption keys generated successfully" && \
-              docker-compose logs gateway_service | grep -q "Command line: 'apache2 -D FOREGROUND'"; do
+          until docker-compose logs gateway_service | grep -q "Command line: 'apache2 -D FOREGROUND'"; do
             echo "Waiting for gateway_service to be fully ready..."
             sleep 5
           done
