--- a/.github/workflows/ci_devnext.yml
+++ b/.github/workflows/ci_devnext.yml
@@ -9,11 +9,11 @@ on:
       - synchronize
       - reopened
     paths-ignore:
-      - .github/workflows/ci_devnext.yml
-      - .github/workflows/ci_staging.yml
-      - .github/workflows/ci_main.yml
       - 'README.md'
       - 'README/**'
+      # - .github/workflows/ci_devnext.yml
+      # - .github/workflows/ci_staging.yml
+      # - .github/workflows/ci_main.yml
 
   workflow_dispatch:
 
