--- a/.github/workflows/ci_main.yml
+++ b/.github/workflows/ci_main.yml
@@ -24,10 +24,8 @@ on:
       - synchronize
       - reopened
     paths-ignore:
-      - .github/workflows/ci_devnext.yml
-      - .github/workflows/ci_staging.yml
-      - .github/workflows/ci_main.yml
       - 'README.md'
+      - 'README/**'
 
   workflow_dispatch:
 
@@ -65,6 +63,10 @@ jobs:
             echo "Waiting for gateway_service to be fully ready..."
             sleep 5
           done
+
+      - name: Install Composer dependencies
+        run: |
+          docker-compose exec -T  gateway_service composer install --optimize-autoloader
 
       - name: Run tests inside gateway_service
         run: docker-compose exec -T gateway_service vendor/bin/phpunit
